--- a/static/index.html
+++ b/static/index.html
@@ -1,44 +1,22 @@
 <!doctype html>
 <html>
   <head>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="js/main.js"></script>
     <title>Quickchat</title>
-    <style>
-      * { margin: 0; padding: 0; box-sizing: border-box; }
-      body { font: 13px Helvetica, Arial; }
-      #text { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-      #text input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-      #text button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages li { padding: 5px 10px; }
-      #messages li:nth-child(odd) { background: #eee; }
-    </style>
   </head>
   <body>
+    <div class="sidebar">
     <form id="name" action="">
-      <input id="n" autocomplete="off" /><button>Send</button>
+      <input id="n" autocomplete="off" /><button>Connect</button>
     </form>
+    <ul id="members"></ul>
+    </div>
     <ul id="messages"></ul>
     <form id="text" action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
-    <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script><script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script>
-      var socket = io();
-      $('#name').submit(function(){
-        socket.emit('named user', $('#n').val());
-        return false;
-      });
-      $('#text').submit(function(){
-        socket.emit('chat message', $('#n').val()+': '+$('#m').val());
-        $('#m').val('');
-        return false;
-      });
-      socket.on('chat message', function(msg){
-        $('#messages').append($('<li>').text(msg));
-      });
-      socket.on('connected',function(some){
-        $('#messages').append($('<li>').text(some));
-      });
-    </script>
   </body>
 </html>
