--- a/static/index.html
+++ b/static/index.html
@@ -2,21 +2,26 @@
 <html>
   <head>
   <link rel="stylesheet" type="text/css" href="css/main.css">
-  <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <title>Quickchat</title>
   </head>
   <body>
-    <div class="sidebar">
-    <form id="name" action="">
-      <input id="n" autocomplete="off" /><button>Connect</button>
-    </form>
-    <ul id="members"></ul>
-    </div>
+      <div class="sidebar">
+        <form id="name" action="">
+          <b class="connect-message">Please Connect:</b>
+          <input id="n" autocomplete="off" />
+          <button>Connect</button>
+        </form>
+        <div class="members-box">
+          <b class="connect-message">Current Users:</b>
+          <ul id="members"></ul>
+        </div>
+      </div>
     <ul id="messages"></ul>
     <form id="text" action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
+  <script src="js/main.js"></script>
   </body>
 </html>
