--- a/static/index.html
+++ b/static/index.html
@@ -1,27 +1,21 @@
 <!doctype html>
 <html>
   <head>
-  <link rel="stylesheet" type="text/css" href="css/main.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+    <script src="https://code.angularjs.org/1.2.28/angular-route.min.js"></script>
     <title>Quickchat</title>
   </head>
-  <body>
-      <div class="sidebar">
-        <form id="name" action="">
-          <b class="connect-message">Please Connect:</b>
-          <input id="n" autocomplete="off" />
-          <button>Connect</button>
-        </form>
-        <div class="members-box">
-          <b class="connect-message">Current Users:</b>
-          <ul id="members"></ul>
-        </div>
-      </div>
-    <ul id="messages"></ul>
-    <form id="text" action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
-    </form>
-  <script src="js/main.js"></script>
+  <body ng-app="kwikchat">
+    <div ng-view></div>
+
+    <!-- Modules -->
+    <script src="js/app.js"> </script>
+
+    <!-- Controllers -->
+    <script src="js/controllers/AboutController.js"> </script>
+    <script src="js/controllers/ChatController.js"> </script>
   </body>
 </html>
